versioned_docs/version-2.16.1/frontend/browsing.mdx
---
description: "Browse and launch games in Zaparoo Frontend, use library menus and controls, and choose alternate MiSTer launchers."
keywords: [zaparoo frontend browsing, launch games from frontend, mister game browser, frontend controls, alternate mister launchers]
sidebar_position: 4
---

# Browse and Launch Games

Frontend starts at your library hub. From there you can browse categories, systems, games, favorites, recents, and folders. Games launch through [Zaparoo Core](../core/index.md), so launcher configuration and media paths follow your normal Zaparoo setup.

If covers, screenshots, or descriptions are missing, follow [Add Artwork and Metadata](./scraping.mdx) before changing the browsing options.

## Browse the library

Open a category to browse its systems, then select a system to browse its games. While browsing games, open the **View** menu and choose **Go to...** to jump by letter or bucket instead of paging through a long list.

The **Other** category holds [launchable items](../features/launchers.md#launchables) that have no normal game file behind them, such as ROM-less MiSTer cores. You can launch them like any other game or write them to a token.

## Use the options menu

Open the options menu to manage the item you are viewing. Depending on the current category, system, or game, the menu can:

- Launch a system core.
- Change the launcher for a system.
- Update the media database or scrape metadata.
- Hide or unhide a category or system.
- Write an NFC token.
- Discover alternate Arcade versions.

See [Add Artwork and Metadata](./scraping.mdx#understand-the-library-actions) for the difference between updating the media database, scraping metadata, and re-scraping existing entries.

## Choose alternate MiSTer launchers

Open a system's options menu to choose any installed launcher that Core supports for that system. Alternate launchers include RetroAchievements, DB9, LLAPI, PWM, 80 MHz overclock, DualRAM, and Sinden variants. Depending on the system, you might see options such as `DualRAMPSX`, `DB9SNES`, `LLAPINintendo64`, `SindenPSX`, or `RASNES`. Use this for an alternate launcher on one system or an exception to your general preference.

RetroAchievements launchers also support a group preference. If you generally want a RetroAchievements core whenever one is installed, set this preference in Core's `config.toml`:

```toml
[launchers]
preference = ["RetroAchievements"]
```

Core then prefers an available RetroAchievements launcher and falls back to the normal launcher when no supported RetroAchievements core is installed for that system. Explicit token launchers and saved system or game overrides still take priority. See the [MiSTer alternate launcher reference](../platforms/mister/launchers.md#alternate-launchers) for the full launcher list and configuration details.

## Change browsing options

Open **Settings**, then **Browsing** to change how the library appears. Available preferences include:

- Grid or list layout.
- Preferred artwork type.
- System logo style.
- Hidden item visibility.
- Original filename display.
- Regional system names.
- Clock format.
- Mouse support.
- Reduced motion.

**Preferred artwork** chooses which imported image type Frontend asks Core for first. **Show original filenames** uses each game's original filename without the extension instead of Core's cleaned title.

When multiple games have the same display name, Frontend can show variant tags inline to help distinguish regions, versions, and other variants.

For custom system artwork, Hub icons, and display names, see [Customize Frontend](./customization.mdx).

## Controls

The default keyboard controls are:

| Action | Default keys |
| ------ | ------------ |
| Move | Arrow keys |
| Select | `Enter` |
| Back | `Escape` or `Backspace` |
| Options menu | `Tab` |
| View menu | `Space` |
| Previous page | `PageUp` |
| Next page | `PageDown` |

MiSTer automatically maps your controller buttons to these keys.
